--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "handlebar": "^1.0.0",
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
